# nuroq

./: .dockerignore  .gitignore  ARCHITECTURE.md  AppVision.md  CAPABILITIES.md  Categorized_AIinput_Fixed.csv  Dockerfile  README.md  SCHEDULING.md  TRAINING_GUIDE.md  agent_memory.json  all_signals.csv  alpaca_executor.py  app.py  create_dpo_training_json.py  create_training_json.py  dashboard.py  data_fetcher.py  dpo_train.jsonl  event_stream.py  gemini.md  live_agent.py  llm_queue.py  main.py  master_test_suite.py  memory_module.py  news_engine.py  nuroq.db-shm  nuroq.db-wal  portfolio.csv  premarket_refresh.py  pyproject.toml  rag_engine.py  research_cycle.py  scan_test.txt  scoring.py  shadow_trades.csv  test_scoring.py  test_telegram.py  tkr.py  (+8 more)
.agents/rules/: CLAUDE.md  DECISIONS.md
.agents/skills/quant_analyst/: API_CONTRACTS.md  ARCHITECTURE.md
adapters/: adapter_config.json
adapters_deepseek/: adapter_config.json
dpo_data/: train.jsonl  valid.jsonl
dpo_data_mistral/: train.jsonl  valid.jsonl
scratch/: test_scan.py
tests/: test_utils.py
